<resources>
    <string name="app_name">BaseDeliveryMVVM</string>
    <string name="mapbox_public_token">pk.eyJ1IjoiY2xvY2t3b3JrY2x5ZGUiLCJhIjoiY2w4MDhtbWU4MDN1NDN3cW43dWM1dHpscSJ9.QgMtds_ijWbbfVXixl78-A</string>
    <string name="cart_label">Корзина</string>
    <string name="dishes_label">Home</string>
    <string name="kfc">kfc</string>
    <string name="pizza">pizza</string>
    <string name="sushi">sushi</string>
    <string name="search_label">Поиск</string>
    <string name="search_hint">Например, Grill</string>
    <string name="empty_result">Empty result</string>
    <string name="empty" />
    <string name="total_price">Create order for $$$</string>
    <string name="toast_error">Error. Please retry</string>
    <string name="wrong">Что-то пошло не так</string>
    <string name="retry">Обновить</string>
    <string name="details_label">Details</string>
    <string name="burger">burger</string>
    <string name="cheese_extra">Сыр</string>
    <string name="login_for_order">Please sign in with your phone to continue.</string>
    <string name="login_for_profile">Осталось еще немного. Подтвердите номер телефона.</string>
    <string name="log_in_by_phone_number">Войти по номеру телефона.</string>
    <string name="agree_personal_data">Пользуясь формой выше, вы подтверждаете ваше согласие на сбор и обработку персональных данных.</string>
    <string name="empty_phone_field">Поле с номером телефона не может быть пустым</string>
    <string name="invalid_symbols_phone_field">Номер телефона может содержать только цифры от 0 до 9 общей длиной 10 символов.</string>
    <string name="verify_phone_btn">Введите код из СМС.</string>
    <string name="home_screen">Home page</string>
    <string name="order_screen">Order</string>
    <string name="profile_label">Profile</string>
    <string name="enter_phone_label">Введите номер телефона</string>
    <string name="confirm_phone_label">Подтверждение номера</string>
    <string name="resend_sms_btn">Повторить</string>
    <string name="time_until_resend_text">Отправить повторно через %1$s сек</string>
    <string name="confirm_phone_headline">Enter the verification code</string>
    <string name="create_new_address_button">Создать новый адрес</string>
    <string name="addresses_headline">Заказ будет доставлен \nпо следующему адресу</string>
    <string name="delivery_info_headline">Информация о доставке</string>
    <string name="label_enter_address_location">Укажите адрес доставки</string>
    <string name="address_loading">Пытаемся определить адрес…</string>
    <string name="address_empty">Не удалось найти адрес</string>
    <string name="set_order_address_from_map">Записать</string>
    <string name="house_hint">Дом</string>
    <string name="entrance_hint">Подъезд</string>
    <string name="apartment_hint">Кв./офис</string>
    <string name="door_phone_hint">Домофон</string>
    <string name="address_hint">Адрес</string>
    <string name="total_price_label">Итого к оплате:</string>
    <string name="checkout_button">Заказать</string>
    <string name="checkout_label">Завершение</string>
    <string name="price_rubles">$s р.</string>
    <string name="type_order_address">Введите адрес доставки</string>
    <string name="end_button_in_suggestions">Карта</string>
    <string name="label_search_address">Поиск адреса по запросу</string>
    <string name="enter_another_phone">Авторизуйтесь с помощью номера телефона.</string>
    <string name="button_edit_order_phone">Внести изменения</string>
    <string name="default_country_code_prefix">RU</string>
    <string name="payment_method_by_card">Оплата банковской картой</string>
    <string name="payment_method_by_cash">Оплата наличными курьеру</string>
    <string name="tag_by_cash">BY_CASH_TAG</string>
    <string name="tag_by_card">TAG_BY_CARD</string>
    <string name="ordersHistory">История заказов</string>
    <string name="button_log_out">Выйти</string>
    <string name="button_log_in">Войти в учетную запись</string>
    <string name="connection_error">Проблемы с интернет-соединением</string>
    <string name="button_sign_in">Войти по номеру телефона</string>
    <string name="username_default">Пользователь</string>
    <string name="username_guest">Гость</string>
    <string name="symbol_dash">—</string>
    <string name="add_to_cart">Добавить в корзину</string>
</resources>