<?xml version="1.0" encoding="utf-8"?>
<com.mapbox.mapboxsdk.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:mapbox_cameraZoom="16"
    tools:context=".presentation.ui.address.EnterAddressLocationFragment">

    <ImageView
        android:id="@+id/marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/mapbox_marker_icon_default" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="32dp">

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:hint="@string/address_hint"
            android:textSize="@dimen/enter_address_text_size"
            android:textStyle="bold"
            tools:ignore="TextFields, LabelFor, Autofill"
            tools:text="Улица Пушкина" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/houseNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/house_hint"
                android:inputType="text"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="TextFields, LabelFor, Autofill" />

            <EditText
                android:id="@+id/entrance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/entrance_hint"
                android:inputType="text"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="LabelFor, Autofill" />

            <EditText
                android:id="@+id/apartmentNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/apartment_hint"
                android:inputType="text"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="TextFields, LabelFor, Autofill" />

            <EditText
                android:id="@+id/doorPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/door_phone_hint"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/set_order_address_from_map"
            android:padding="8dp"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:cornerRadius="@dimen/radius_default_app" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.mapbox.mapboxsdk.maps.MapView>