<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray_gradient"
    android:orientation="vertical"
    tools:context="presentation.ui.order.CheckoutFragment">

    <LinearLayout
        android:id="@+id/addressesHeadlineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addressesHeadline"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addresses_headline" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_round_corners"
        android:elevation="@dimen/default_elevation"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressesHeadlineLayout">

        <ImageView
            android:id="@+id/addressIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_delivery_dining_24" />

        <TextView
            android:id="@+id/addressTextView"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/type_order_address" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/addressDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="@dimen/radius_default_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_elevation"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/houseNumber"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/house_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="TextFields, LabelFor, Autofill" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entrance"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/entrance_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="LabelFor, Autofill" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apartmentNumber"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/apartment_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/enter_address_text_size"

                tools:ignore="TextFields, LabelFor, Autofill" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/doorPhone"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/door_phone_hint"
                android:maxLines="1"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/enter_address_text_size"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mapViewLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="16dp"
        android:elevation="@dimen/default_elevation"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintTop_toBottomOf="@id/addressDetailsLayout">

        <ImageView
            android:id="@+id/mapImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@color/white_space_blue" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/paymentHeadline"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/delivery_info_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapViewLayout" />

    <LinearLayout
        android:id="@+id/phoneInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_round_corners"
        android:elevation="@dimen/default_elevation"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentHeadline">

        <ImageView
            android:id="@+id/phoneInfoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_phone_callback_24" />

        <TextView
            android:id="@+id/phoneInfo"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="+7(999)111-11-11" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paymentMethodLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_round_corners"
        android:elevation="@dimen/default_elevation"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInfoLayout">

        <ImageView
            android:id="@+id/paymentMethodIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_credit_card_24" />

        <TextView
            android:id="@+id/paymentMethod"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="Оплата банковской картой" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:elevation="@dimen/default_elevation"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/totalPriceLabel"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/total_price_label" />

            <TextView
                android:id="@+id/total_price"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="1000 p." />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:text="@string/checkout_button"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:cornerRadius="@dimen/radius_default_app" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>